@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-04-10T08:10:14Z",
-  "count" : 3,
-  "count_minmax" : [ 0, 3 ],
-  "count_prev_day_inc" : 3,
+  "timestamp" : "2022-04-10T16:08:56Z",
+  "count" : 8,
+  "count_minmax" : [ 0, 8 ],
+  "count_prev_day_inc" : 8,
   "count_prev_day_dec" : 9,
   "uniques" : 1,
   "uniques_minmax" : [ 0, 1 ],
