@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-04-10T08:10:14Z",
+  "timestamp" : "2022-04-10T16:08:56Z",
   "count_outdated" : 657,
   "uniques_outdated" : 40,
-  "count" : 953,
+  "count" : 958,
   "uniques" : 56,
   "views" : [
     {
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-04-10T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 0, 3 ],
+      "count": 8,
+      "count_minmax": [ 0, 8 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
