@@ -1,5 +1,5 @@
 {
-  "count": 296,
+  "count": 301,
   "uniques": 2,
   "views": [
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-04-10T00:00:00Z",
-      "count": 3,
+      "count": 8,
       "uniques": 1
     }
   ]
