@@ -1,3 +1,9 @@
+2022-04-10T16:08:56Z:
+* notice: last 14d: all unq: 301 2
+* notice: prev accum: outdated-all outdated-unq / all unq: 657 40 / 953 56
+* notice: next accum: outdated-all outdated-unq / all unq: 657 40 / 958 56
+* notice: prev json diff // prev day diff: unq all: +0 +5 / -0 -0 // +1 +8 / -0 -9
+
 2022-04-10T08:10:14Z:
 * notice: last 14d: all unq: 296 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 657 40 / 958 55
